tests/failures/todo_while_version/before_version.stderr
error: TODO version requirement '<0.1.0' not satisfied by current v0.3.0
 --> tests/failures/todo_while_version/before_version.rs:5:5
  |
5 |     todo_while!("<0.1.0");
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `todo_while` (in Nightly builds, run with -Z macro-backtrace for more info)
